# calculadora-cosmologica

./: Cargo.toml  LICENSE  input_data.toml
plots/: constante_hubble.py  distancias.py  edad_universo.py  factor_escala.py  horizonte_de_partículas.py  radio_hubble.py
src/: consts.rs  functions.rs  input.rs  integral_methods.rs  main.rs  plotting.rs
