[package]
name = "calculadora-cosmologica"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
# pgfplots = {version="0.5.1", features=["tectonic"]}
plotters = "0.3.7"
# gnuplot="0.0.44"
serde = {version="1.0.216", features=["derive"]}
toml = "0.8.19"
